# Spill-The-Tea

./: README.md
Celebrity Gossip/: app.py  pyproject.toml  temz_scrapper.py  tmz_articles.json  tmz_chatbot.py  tmz_chunked_data.json  tmz_data.json
